initial commit v.7
